--- a/index.html
+++ b/index.html
@@ -11,11 +11,24 @@
       
 
   <div class="contenedor">
-	<input class="form-control" type="text" id="caja" placeholder="Ingrese el id del pokemon">
+	<input class="form-control" type="text" id="search" placeholder="Ingrese el id del pokemon">
 	<button class="text-white btn bg-danger" id="button">Buscar</button>
 	<img class="pokemon" src="" id="img">
 	<p class="text-white" id="info"></p>
   </div>
+  <div id="divImg">
+
+  </div>
+
+  <div id="cardImg"class="card" style="width: 18rem;">
+  <img src="..." class="card-img-top" alt="...">
+  <div class="card-body">
+    <h5 class="card-title">Card title</h5>
+    <p class="card-text"></p>
+    <a href="#" class="btn btn-primary">Go somewhere</a>
+  </div>
+</div>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="pokemon.js"></script>
 </body>
 </html> 
