--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -11,27 +15,27 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <input
-        class="form-control"
-        type="text"
-        id="search"
-        placeholder="Ingrese el id del pokemon"
-      />
-      <button class="text-white btn bg-danger" id="button">Buscar</button>
-      <img class="pokemon" src="" id="img" />
-      <p class="text-white" id="info"></p>
+    <nav class="navbar navbar-light bg-danger">
+      <a class="navbar-brand">Pokedex</a>
+      <form class="form-inline">
+        <input
+          class="form-control mr-sm-2"
+          type="search"
+          placeholder="Search"
+          aria-label="Search"
+        />
+        <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">
+          Search
+        </button>
+      </form>
+    </nav>
 
-      <div id="divImg"></div>
+    <div id="div" class="container-el"></div>
 
-      <script
-        src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-        crossorigin="anonymous"
-      ></script>
-      <script src="pokemon.js"></script>
-    </div>
+    <script src="pokemon.js"></script>
   </body>
 </html>
+
